src/native/string.h

void movsb_no_rep(void);
void movsw_no_rep(void);
void movsd_no_rep(void);
void cmpsb_no_rep(void);
void cmpsw_no_rep(void);
void cmpsd_no_rep(void);
void stosb_no_rep(void);
void stosw_no_rep(void);
void stosd_no_rep(void);
void lodsb_no_rep(void);
void lodsw_no_rep(void);
void lodsd_no_rep(void);
void scasb_no_rep(void);
void scasw_no_rep(void);
void scasd_no_rep(void);
void insb_no_rep(void);
void insw_no_rep(void);
void insd_no_rep(void);
void outsb_no_rep(void);
void outsw_no_rep(void);
void outsd_no_rep(void);