src/rust/cpu2/instructions.rs


    #[no_mangle]
    fn dbg_log(m: *const i8) -> ();
    #[no_mangle]
    fn dbg_log1(m: *const i8, x: i32) -> ();
    #[no_mangle]
    fn c_comment(m: *const i8) -> ();
    #[no_mangle]
    static mut mem8: *mut u8;
    #[no_mangle]
    static mut mem16: *mut u16;
    #[no_mangle]
    static mut mem32s: *mut i32;
    #[no_mangle]
    static mut jit_block_boundary: bool;
    #[no_mangle]
    static VALID_TLB_ENTRY_MAX: i32;
    #[no_mangle]
    static mut valid_tlb_entries: [i32; 10000];
    #[no_mangle]
    static mut valid_tlb_entries_count: i32;
    #[no_mangle]
    static TLB_VALID: i32;
    #[no_mangle]
    static TLB_READONLY: i32;
    #[no_mangle]
    static TLB_NO_USER: i32;
    #[no_mangle]
    static TLB_IN_MAPPED_RANGE: i32;
    #[no_mangle]
    static TLB_GLOBAL: i32;
    #[no_mangle]
    static TLB_HAS_CODE: i32;
    #[no_mangle]
    static CPU_EXCEPTION_DE: i32;
    #[no_mangle]
    static CPU_EXCEPTION_DB: i32;
    #[no_mangle]
    static CPU_EXCEPTION_NMI: i32;
    #[no_mangle]
    static CPU_EXCEPTION_BP: i32;
    #[no_mangle]
    static CPU_EXCEPTION_OF: i32;
    #[no_mangle]
    static CPU_EXCEPTION_BR: i32;
    #[no_mangle]
    static CPU_EXCEPTION_UD: i32;
    #[no_mangle]
    static CPU_EXCEPTION_NM: i32;
    #[no_mangle]
    static CPU_EXCEPTION_DF: i32;
    #[no_mangle]
    static CPU_EXCEPTION_TS: i32;
    #[no_mangle]
    static CPU_EXCEPTION_NP: i32;
    #[no_mangle]
    static CPU_EXCEPTION_SS: i32;
    #[no_mangle]
    static CPU_EXCEPTION_GP: i32;
    #[no_mangle]
    static CPU_EXCEPTION_PF: i32;
    #[no_mangle]
    static CPU_EXCEPTION_MF: i32;
    #[no_mangle]
    static CPU_EXCEPTION_AC: i32;
    #[no_mangle]
    static CPU_EXCEPTION_MC: i32;
    #[no_mangle]
    static CPU_EXCEPTION_XM: i32;
    #[no_mangle]
    static CPU_EXCEPTION_VE: i32;
    #[no_mangle]
    fn get_eflags() -> i32;
    #[no_mangle]
    fn is_asize_32() -> bool;
    #[no_mangle]
    fn get_seg_cs() -> i32;
    #[no_mangle]
    fn get_seg_ss() -> i32;
    #[no_mangle]
    fn get_seg_prefix(default_segment: i32) -> i32;
    #[no_mangle]
    fn get_seg_prefix_ds(offset: i32) -> i32;
    #[no_mangle]
    fn run_prefix_instruction() -> ();
    #[no_mangle]
    fn segment_prefix_op(seg: i32) -> ();
    #[no_mangle]
    fn trigger_ud() -> ();
    #[no_mangle]
    fn trigger_nm() -> ();
    #[no_mangle]
    fn trigger_gp_non_raising(code: i32) -> ();
    #[no_mangle]
    fn get_reg8_index(index: i32) -> i32;
    #[no_mangle]
    fn read_reg8(index: i32) -> i32;
    #[no_mangle]
    fn write_reg8(index: i32, value: i32) -> ();
    #[no_mangle]
    fn get_reg16_index(index: i32) -> i32;
    #[no_mangle]
    fn read_reg16(index: i32) -> i32;
    #[no_mangle]
    fn write_reg16(index: i32, value: i32) -> ();
    #[no_mangle]
    fn read_reg32(index: i32) -> i32;
    #[no_mangle]
    fn write_reg32(index: i32, value: i32) -> ();
    #[no_mangle]
    fn get_real_eip() -> i32;
    #[no_mangle]
    fn set_stack_reg(value: i32) -> ();
    #[no_mangle]
    fn vm86_mode() -> bool;
    #[no_mangle]
    fn getiopl() -> i32;
    #[no_mangle]
    static M_LOG2E: f64;
    #[no_mangle]
    static M_LN2: f64;
    #[no_mangle]
    static M_LN10: f64;
    #[no_mangle]
    static M_PI: f64;
    #[no_mangle]
    static FPU_C0: i32;
    #[no_mangle]
    static FPU_C1: i32;
    #[no_mangle]
    static FPU_C2: i32;
    #[no_mangle]
    static FPU_C3: i32;
    #[no_mangle]
    static FPU_RESULT_FLAGS: i32;
    #[no_mangle]
    static FPU_STACK_TOP: i32;
    #[no_mangle]
    fn fpu_get_st0() -> f64;
    #[no_mangle]
    fn fpu_get_sti(i: i32) -> f64;
    #[no_mangle]
    fn fpu_integer_round(f: f64) -> f64;
    #[no_mangle]
    fn fpu_fadd(target_index: i32, val: f64) -> ();
    #[no_mangle]
    fn fpu_fclex() -> ();
    #[no_mangle]
    fn fpu_fcmovcc(condition: bool, r: i32) -> ();
    #[no_mangle]
    fn fpu_fcom(y: f64) -> ();
    #[no_mangle]
    fn fpu_fcomi(r: i32) -> ();
    #[no_mangle]
    fn fpu_fcomip(r: i32) -> ();
    #[no_mangle]
    fn fpu_fcomp(val: f64) -> ();
    #[no_mangle]
    fn fpu_fdiv(target_index: i32, val: f64) -> ();
    #[no_mangle]
    fn fpu_fdivr(target_index: i32, val: f64) -> ();
    #[no_mangle]
    fn fpu_ffree(r: i32) -> ();
    #[no_mangle]
    fn fpu_fildm64(addr: i32) -> ();
    #[no_mangle]
    fn fpu_finit() -> ();
    #[no_mangle]
    fn fpu_fistm16(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fistm16p(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fistm32(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fistm32p(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fistm64p(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fldcw(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fldenv(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fldm32(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fldm64(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fldm80(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fmul(target_index: i32, val: f64) -> ();
    #[no_mangle]
    fn fpu_fnstsw_mem(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fnstsw_reg() -> ();
    #[no_mangle]
    fn fpu_fprem() -> ();
    #[no_mangle]
    fn fpu_frstor(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fsave(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fst(r: i32) -> ();
    #[no_mangle]
    fn fpu_fst80p(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fstcw(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fstenv(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fstm32(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fstm32p(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fstm64(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fstm64p(addr: i32) -> ();
    #[no_mangle]
    fn fpu_fstp(r: i32) -> ();
    #[no_mangle]
    fn fpu_fsub(target_index: i32, val: f64) -> ();
    #[no_mangle]
    fn fpu_fsubr(target_index: i32, val: f64) -> ();
    #[no_mangle]
    fn fpu_ftst(x: f64) -> ();
    #[no_mangle]
    fn fpu_fucom(r: i32) -> ();
    #[no_mangle]
    fn fpu_fucomi(r: i32) -> ();
    #[no_mangle]
    fn fpu_fucomip(r: i32) -> ();
    #[no_mangle]
    fn fpu_fucomp(r: i32) -> ();
    #[no_mangle]
    fn fpu_fucompp() -> ();
    #[no_mangle]
    fn fpu_fxam(x: f64) -> ();
    #[no_mangle]
    fn fpu_fxch(i: i32) -> ();
    #[no_mangle]
    fn fpu_fxtract() -> ();
    #[no_mangle]
    fn fpu_pop() -> ();
    #[no_mangle]
    fn fpu_push(x: f64) -> ();
    #[no_mangle]
    fn fwait() -> ();
    #[no_mangle]
    static reg8: *mut u8;
    #[no_mangle]
    static reg16: *mut u16;
    #[no_mangle]
    static reg8s: *mut i8;
    #[no_mangle]
    static reg16s: *mut i16;
    #[no_mangle]
    static reg32s: *mut i32;
    #[no_mangle]
    static last_op1: *mut i32;
    #[no_mangle]
    static last_op2: *mut i32;
    #[no_mangle]
    static last_op_size: *mut i32;
    #[no_mangle]
    static last_add_result: *mut i32;
    #[no_mangle]
    static last_result: *mut i32;
    #[no_mangle]
    static flags_changed: *mut i32;
    #[no_mangle]
    static flags: *mut i32;
    #[no_mangle]
    static page_fault: *mut bool;
    #[no_mangle]
    static a20_enabled: *mut bool;
    #[no_mangle]
    static instruction_pointer: *mut i32;
    #[no_mangle]
    static previous_ip: *mut i32;
    #[no_mangle]
    static idtr_size: *mut i32;
    #[no_mangle]
    static idtr_offset: *mut i32;
    #[no_mangle]
    static gdtr_size: *mut i32;
    #[no_mangle]
    static gdtr_offset: *mut i32;
    #[no_mangle]
    static cr: *mut i32;
    #[no_mangle]
    static cpl: *mut u8;
    #[no_mangle]
    static in_hlt: *mut bool;
    #[no_mangle]
    static last_virt_eip: *mut i32;
    #[no_mangle]
    static eip_phys: *mut i32;
    #[no_mangle]
    static last_virt_esp: *mut i32;
    #[no_mangle]
    static esp_phys: *mut i32;
    #[no_mangle]
    static sysenter_cs: *mut i32;
    #[no_mangle]
    static sysenter_esp: *mut i32;
    #[no_mangle]
    static sysenter_eip: *mut i32;
    #[no_mangle]
    static prefixes: *mut u8;
    #[no_mangle]
    static timestamp_counter: *mut u32;
    #[no_mangle]
    static sreg: *mut u16;
    #[no_mangle]
    static dreg: *mut i32;
    #[no_mangle]
    static fw_value: *mut i32;
    #[no_mangle]
    static segment_is_null: *mut bool;
    #[no_mangle]
    static segment_offsets: *mut i32;
    #[no_mangle]
    static segment_limits: *mut u32;
    #[no_mangle]
    static protected_mode: *mut bool;
    #[no_mangle]
    static is_32: *mut bool;
    #[no_mangle]
    static stack_size_32: *mut bool;
    #[no_mangle]
    static memory_size: *mut u32;
    #[no_mangle]
    static fpu_stack_empty: *mut i32;
    #[no_mangle]
    static mxcsr: *mut i32;
    #[no_mangle]
    static reg_xmm: *mut reg128;
    #[no_mangle]
    static current_tsc: *mut u64;
    #[no_mangle]
    static fpu_st: *mut f64;
    #[no_mangle]
    static fpu_st8: *mut u8;
    #[no_mangle]
    static fpu_st32: *mut i32;
    #[no_mangle]
    static fpu_stack_ptr: *mut u32;
    #[no_mangle]
    static fpu_control_word: *mut i32;
    #[no_mangle]
    static fpu_status_word: *mut i32;
    #[no_mangle]
    static fpu_opcode: *mut i32;
    #[no_mangle]
    static fpu_ip: *mut i32;
    #[no_mangle]
    static fpu_ip_selector: *mut i32;
    #[no_mangle]
    static fpu_dp: *mut i32;
    #[no_mangle]
    static fpu_dp_selector: *mut i32;
    #[no_mangle]
    static reg_mmx: *mut reg64;
    #[no_mangle]
    static opstats_buffer: *mut u32;
    #[no_mangle]
    static opstats_buffer_0f: *mut u32;
    #[no_mangle]
    static tlb_data: *mut i32;
    #[no_mangle]
    #[no_mangle]
    #[no_mangle]
    #[no_mangle]
    fn adjust_stack_reg(adjustment: i32) -> ();
    #[no_mangle]
    fn get_stack_pointer(offset: i32) -> i32;
    #[no_mangle]
    fn switch_seg(_: i32, _: i32) -> bool;
    #[no_mangle]
    fn run_instruction0f_16(opcode: i32) -> ();
    #[no_mangle]
    fn run_instruction0f_32(opcode: i32) -> ();
    #[no_mangle]
    fn pusha16() -> ();
    #[no_mangle]
    fn pusha32() -> ();
    #[no_mangle]
    fn popa16() -> ();
    #[no_mangle]
    fn popa32() -> ();
    #[no_mangle]
    fn arpl(_: i32, _: i32) -> i32;
    #[no_mangle]
    fn insb_no_rep() -> ();
    #[no_mangle]
    fn insw_no_rep() -> ();
    #[no_mangle]
    fn insd_no_rep() -> ();
    #[no_mangle]
    fn outsb_no_rep() -> ();
    #[no_mangle]
    fn outsw_no_rep() -> ();
    #[no_mangle]
    fn outsd_no_rep() -> ();
    #[no_mangle]
    fn xchg8(data: i32, r8: i32) -> i32;
    #[no_mangle]
    fn xchg16(data: i32, r16: i32) -> i32;
    #[no_mangle]
    fn xchg32(data: i32, r32: i32) -> i32;
    #[no_mangle]
    fn xchg16r(r16: i32) -> ();
    #[no_mangle]
    fn xchg32r(r32: i32) -> ();
    #[no_mangle]
    fn far_jump(_: i32, _: i32, _: i32) -> ();
    #[no_mangle]
    fn handle_irqs() -> ();
    #[no_mangle]
    fn update_eflags(_: i32) -> ();
    #[no_mangle]
    fn movsb_no_rep() -> ();
    #[no_mangle]
    fn movsw_no_rep() -> ();
    #[no_mangle]
    fn movsd_no_rep() -> ();
    #[no_mangle]
    fn cmpsb_no_rep() -> ();
    #[no_mangle]
    fn cmpsw_no_rep() -> ();
    #[no_mangle]
    fn cmpsd_no_rep() -> ();
    #[no_mangle]
    fn stosb_no_rep() -> ();
    #[no_mangle]
    fn stosw_no_rep() -> ();
    #[no_mangle]
    fn stosd_no_rep() -> ();
    #[no_mangle]
    fn lodsb_no_rep() -> ();
    #[no_mangle]
    fn lodsw_no_rep() -> ();
    #[no_mangle]
    fn lodsd_no_rep() -> ();
    #[no_mangle]
    fn scasb_no_rep() -> ();
    #[no_mangle]
    fn scasw_no_rep() -> ();
    #[no_mangle]
    fn scasd_no_rep() -> ();
    #[no_mangle]
    fn lss16(_: i32, _: i32, _: i32) -> ();
    #[no_mangle]
    fn lss32(_: i32, _: i32, _: i32) -> ();
    #[no_mangle]
    fn enter16(_: i32, _: i32) -> ();
    #[no_mangle]
    fn enter32(_: i32, _: i32) -> ();
    #[no_mangle]
    fn far_return(_: i32, _: i32, _: i32) -> ();
    #[no_mangle]
    fn call_interrupt_vector(
        interrupt_nr: i32,
        is_software_int: bool,
        has_error_code: bool,
        error_code: i32,
    ) -> ();
    #[no_mangle]
    fn getof() -> bool;
    #[no_mangle]
    fn iret16() -> ();
    #[no_mangle]
    fn iret32() -> ();
